--- a/_config.yml
+++ b/_config.yml
@@ -57,12 +57,12 @@ highlight_theme: github
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
-organization: 
-organization_url: 
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+author: Xiang Xisheng
+organization: feieryun
+organization_url: http://feieryun.cn
+github_username: xiangxisheng
+location: Zhejiang, China
+email: xiangxisheng@gmail.com
 
 # ---------------- #
 #    Navigation    #
