--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ paginate: 10
 lsi: false
 quiet: false
 excerpt_separator: "\n\n"
-permalink: /posts/:year-:month-:day/:title.html
+permalink: /posts/:categories/:title.html
 plugins:
     - jekyll-github-metadata
     - rouge
