--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,27 +1,16 @@
 - sitename: GitHub
-  name: mzlogin
-  url: https://github.com/mzlogin
-
-- sitename: 掘金
-  name: mzlogin
-  url: http://gold.xitu.io/user/570ddaeb2e958a005c63b2da
-
-- sitename: LinkedIn
-  name: mazhuang
-  url: https://www.linkedin.com/in/mazhuang
+  name: xiangxisheng
+  url: https://github.com/xiangxisheng
 
 - sitename: 博客
-  name: 码志
-  url: http://mazhuang.org
+  name: 项希盛
+  url: http://xiangxisheng.cn
 
 - sitename: 微博
-  name: mzlogin
-  url: http://weibo.com/mzlogin
+  name: xiangxisheng
+  url: http://weibo.com/xiangxisheng
 
-- sitename: 知乎
-  name: mzlogin
-  url: http://www.zhihu.com/people/mzlogin
+- sitename: Facebook
+  name: xiangxisheng
+  url: http://fb.me/xiangxisheng
 
-- sitename: 豆瓣
-  name: 闷骚的程序员
-  url: http://www.douban.com/people/freedim
