--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url:
 date_format: "ordinal"
-title: XiXi技术网
+title: XiXi技术网 (个人技术分享)
 subtitle: "公众号：飞儿云平台"
 description: "项希盛的个人博客，公众号：飞儿云平台"
 keywords: 项希盛, Xiang Xisheng, xiangxisheng, feieryun, 飞儿云平台
